# cromgis

./: .gitignore  README.md  aquaa.py  asher-corpus.txt  asher-model.pickle  asher.py  asherisms.json  asherizedUsers.txt  badmarkov.py  botUsers.txt  bruh.sh  cheese.py  cmarkov.py  commics.py  crimage.py  delphi.py  failure.py  garfield.py  garlic.py  garlic_functions.py  garlikov.py  gibberish.py  i3vie.py  imgur.py  insult.py  invalid.py  invalid_userbot.py  korbo.py  kosh.py  letters.py  lumien.py  main.py  mind.txt  pxl_srt.py  pyproject.toml  qwerty.py  ruff.toml  start.sh  stop.sh  test.py  (+5 more)
43130-comics/: 43130-comics
43130-comics/comics/: .html  comics.py  comics.theme  strip.py  strip.theme
corpora/: kosh.txt
