[tool.poetry]
name = "cromgis"
version = "0.1.0"
description = ""
authors = ["Nate <14845347+garlic-os@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
Pillow = "^10.0.1"
dataset = "^1.5.2"
markovify = "^0.8.0"
nbfi = "^0.1.2"
python-dotenv = "^0.14.0"
scipy = "1.10.0"
discord-py = "^2.3.2"
jishaku = "^2.5.1"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
asyncio-atexit = "^1.0.1"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
